--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -24,7 +24,7 @@
   --sbb-navigation-backdrop-color: transparent;
   --sbb-navigation-list-margin-block-start: var(--sbb-spacing-responsive-xxl);
   --sbb-navigation-inline-start: 0;
-  --sbb-navigation-height: 100vh;
+  --sbb-navigation-height: 100dvh;
   --sbb-navigation-width: 100%;
   --sbb-navigation-expanded-width: 100%;
   --sbb-navigation-inset: 0 auto auto 0;
@@ -76,7 +76,7 @@
   --sbb-navigation-content-transform: translateX(-100%);
 
   @include sbb.mq($from: 'large') {
-    --sbb-navigation-expanded-width: 100vw;
+    --sbb-navigation-expanded-width: 100dvw;
     --sbb-navigation-content-transform: translateX(0%);
   }
 }
